[package]
name = "detours-sys"
version = "0.1.0"
edition = "2018"
[features]
default = []
build_bind = ["bindgen","winreg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
[dev-dependencies]
winapi = { version = "0.3", features = ["winuser","synchapi","processthreadsapi","sysinfoapi"] }
[build-dependencies]
cc = "1.0.70"
bindgen = { version = "0.59", optional = true }
winreg = { version = "0.10.1", optional = true } 